--- a/dialerwindow.ui
+++ b/dialerwindow.ui
@@ -19,9 +19,15 @@
      <rect>
       <x>70</x>
       <y>140</y>
-      <width>80</width>
-      <height>22</height>
+      <width>81</width>
+      <height>21</height>
      </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>pushOne</string>
@@ -174,10 +180,18 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>320</y>
+      <y>330</y>
       <width>80</width>
-      <height>22</height>
+      <height>71</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
     </property>
     <property name="text">
      <string>pushEnd</string>
@@ -187,13 +201,20 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>320</y>
-      <width>80</width>
-      <height>22</height>
+      <y>330</y>
+      <width>61</width>
+      <height>61</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/backspace-480.png);
+border: none;
+background-repeat:none;</string>
+    </property>
     <property name="text">
-     <string>pushDel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineDisplay">
@@ -223,7 +244,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>29</height>
     </rect>
    </property>
   </widget>
