--- a/dialerwindow.ui
+++ b/dialerwindow.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>897</width>
+    <height>706</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>DialerWindow</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushOne">
@@ -20,17 +23,22 @@
       <x>70</x>
       <y>140</y>
       <width>81</width>
-      <height>21</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="autoFillBackground">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
     </property>
     <property name="text">
-     <string>pushOne</string>
+     <string>1</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushTwo">
@@ -38,149 +46,6 @@
      <rect>
       <x>180</x>
       <y>140</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushTwo</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushThree">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>140</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushThree</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushFour">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>180</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushFour</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushFive">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>180</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushFive</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushSix">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>180</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushSix</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushSeven">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>220</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushSeven</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushEight">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>220</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushEight</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushNine">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>220</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushNine</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushStar">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>270</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushStar</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushZero">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>270</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushZero</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushHash">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>270</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>pushHash</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushEnd">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>330</y>
       <width>80</width>
       <height>71</height>
      </rect>
@@ -194,14 +59,245 @@ border: none;
 background-repeat:none;</string>
     </property>
     <property name="text">
-     <string>pushEnd</string>
+     <string>2</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushThree">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>140</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>3</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushFour">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>230</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>4</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushFive">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>230</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>5</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushSix">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>230</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>6</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushSeven">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>320</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>7</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushEight">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>320</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>8</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushNine">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>320</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>9</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushStar">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>410</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>*</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushZero">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>410</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushHash">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>410</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>#</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushEnd">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>500</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string>Call</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushDel">
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>330</y>
+      <y>510</y>
       <width>61</width>
       <height>61</height>
      </rect>
@@ -230,11 +326,45 @@ background-repeat:none;</string>
    <widget class="QTableView" name="tableSafe">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>40</y>
+      <x>480</x>
+      <y>80</y>
       <width>361</width>
       <height>471</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="dialLabel">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>30</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 0, 0);
+font: 12pt &quot;Segoe UI&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Dialer</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="addressBook">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>30</y>
+      <width>161</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 0, 0);
+font: 12pt &quot;Segoe UI&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Address Book</string>
     </property>
    </widget>
   </widget>
@@ -243,7 +373,7 @@ background-repeat:none;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>897</width>
      <height>29</height>
     </rect>
    </property>
