--- a/dialerwindow.ui
+++ b/dialerwindow.ui
@@ -6,24 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>897</width>
-    <height>706</height>
+    <width>929</width>
+    <height>754</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>DialerWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(213, 213, 213);</string>
+   <string notr="true">background-color: rgb(235, 235, 235);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushOne">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>140</y>
-      <width>81</width>
-      <height>71</height>
+      <x>50</x>
+      <y>130</y>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -45,9 +45,9 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>140</y>
-      <width>80</width>
-      <height>71</height>
+      <y>130</y>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -65,10 +65,10 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushThree">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>140</y>
-      <width>80</width>
-      <height>71</height>
+      <x>310</x>
+      <y>130</y>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -86,10 +86,10 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushFour">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>50</x>
       <y>230</y>
-      <width>80</width>
-      <height>71</height>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -109,8 +109,8 @@ background-repeat:none;</string>
      <rect>
       <x>180</x>
       <y>230</y>
-      <width>80</width>
-      <height>71</height>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -128,10 +128,10 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushSix">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>310</x>
       <y>230</y>
-      <width>80</width>
-      <height>71</height>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -149,10 +149,10 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushSeven">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>320</y>
-      <width>80</width>
-      <height>71</height>
+      <x>50</x>
+      <y>330</y>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -171,9 +171,9 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>320</y>
-      <width>80</width>
-      <height>71</height>
+      <y>330</y>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -191,10 +191,10 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushNine">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>320</y>
-      <width>80</width>
-      <height>71</height>
+      <x>310</x>
+      <y>330</y>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -212,19 +212,19 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushStar">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>410</y>
-      <width>80</width>
-      <height>71</height>
+      <x>50</x>
+      <y>440</y>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
 alternate-background-color: rgb(255, 255, 255);
-border-image: url(:/images/gray button.png);
-color: rgb(0, 0, 0);
 border: none;
-background-repeat:none;</string>
+background-repeat:none;
+border-image: url(:/images/gray button.png);
+color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
      <string>*</string>
@@ -234,9 +234,9 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>410</y>
-      <width>80</width>
-      <height>71</height>
+      <y>440</y>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -254,10 +254,10 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushHash">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>410</y>
-      <width>80</width>
-      <height>71</height>
+      <x>310</x>
+      <y>430</y>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -276,9 +276,9 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>500</y>
-      <width>80</width>
-      <height>71</height>
+      <y>540</y>
+      <width>111</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -290,16 +290,16 @@ border: none;
 background-repeat:none;</string>
     </property>
     <property name="text">
-     <string>Call</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="pushDel">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>510</y>
-      <width>61</width>
-      <height>61</height>
+      <x>330</x>
+      <y>560</y>
+      <width>71</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -326,7 +326,7 @@ background-repeat:none;</string>
      <string notr="true">border-color:none;
 color: rgb(0, 0, 0);
 border: transparent;
-</string>
+font: 12pt &quot;Segoe UI&quot;;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -376,13 +376,266 @@ font: 12pt &quot;Segoe UI&quot;;</string>
      <string>Address Book</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>570</y>
+      <width>51</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/images/kisspng-computer-icons-mobile-phones-telephone-call-icon-d-phone-icon-5abf145b7f8de6.5771346015224720275225.png);
+background-color:transparent;
+alternate-background-color: rgb(255, 255, 255);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>290</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: none;
+background-color:none;</string>
+    </property>
+    <property name="text">
+     <string>MNO</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>290</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: none;
+background-color:none;</string>
+    </property>
+    <property name="text">
+     <string>JKL</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>290</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: none;
+background-color:none;</string>
+    </property>
+    <property name="text">
+     <string>GHI</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>190</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: none;
+background-color:none;</string>
+    </property>
+    <property name="text">
+     <string>ABC</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>190</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: none;
+background-color:none;</string>
+    </property>
+    <property name="text">
+     <string>DEF</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>190</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: none;
+background-color:none;</string>
+    </property>
+    <property name="text">
+     <string>%^</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>390</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: none;
+background-color:none;</string>
+    </property>
+    <property name="text">
+     <string>PQRS</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>390</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: none;
+background-color:none;</string>
+    </property>
+    <property name="text">
+     <string>TUV</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>390</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: none;
+background-color:none;</string>
+    </property>
+    <property name="text">
+     <string>WXYZ</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>500</y>
+      <width>69</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: none;
+background-color:none;</string>
+    </property>
+    <property name="text">
+     <string>+</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>897</width>
+     <width>929</width>
      <height>29</height>
     </rect>
    </property>
