Finalized some icons!

--- a/images.qrc
+++ b/images.qrc
@@ -7,5 +7,9 @@
         <file>images/814-8147045_call-us-phone-icon-black-circle.png</file>
         <file>images/phone-512.png</file>
         <file>images/gray button.png</file>
+        <file>images/clock-png-icon-8-transparent.png</file>
+        <file>images/img_321695.png</file>
+        <file>images/img_550735.png</file>
+        <file>images/Picture1-512.png</file>
     </qresource>
 </RCC>
