--- a/dialerwindow.ui
+++ b/dialerwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>986</width>
-    <height>754</height>
+    <width>983</width>
+    <height>808</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,7 +21,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>130</y>
+      <y>100</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -45,7 +45,7 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>130</y>
+      <y>100</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -67,7 +67,7 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>130</y>
+      <y>100</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -89,7 +89,7 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>230</y>
+      <y>200</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -111,7 +111,7 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>230</y>
+      <y>200</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -133,7 +133,7 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>230</y>
+      <y>200</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -155,7 +155,7 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>330</y>
+      <y>300</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -177,7 +177,7 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>330</y>
+      <y>300</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -199,7 +199,7 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>330</y>
+      <y>300</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -221,7 +221,7 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>440</y>
+      <y>410</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -242,7 +242,7 @@ color: rgb(0, 0, 0);</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>440</y>
+      <y>410</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -264,7 +264,7 @@ background-repeat:none;</string>
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>440</y>
+      <y>410</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -285,10 +285,10 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushEnd">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>570</y>
-      <width>81</width>
-      <height>81</height>
+      <x>190</x>
+      <y>530</y>
+      <width>101</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -306,16 +306,16 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushDel">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>570</y>
-      <width>71</width>
-      <height>71</height>
+      <x>320</x>
+      <y>540</y>
+      <width>81</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
-alternate-background-color: rgb(255, 255, 255);
 border-image: url(:/images/backspace-480.png);
+alternate-background-color: rgb(255, 255, 255);
 border: none;
 background-repeat:none;</string>
     </property>
@@ -326,8 +326,8 @@ background-repeat:none;</string>
    <widget class="QLineEdit" name="lineDisplay">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>80</y>
+      <x>90</x>
+      <y>40</y>
       <width>311</width>
       <height>31</height>
      </rect>
@@ -336,7 +336,7 @@ background-repeat:none;</string>
      <string notr="true">border-color:none;
 color: rgb(0, 0, 0);
 border: transparent;
-font: 12pt &quot;Segoe UI&quot;;</string>
+font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -346,27 +346,13 @@ font: 12pt &quot;Segoe UI&quot;;</string>
     <property name="geometry">
      <rect>
       <x>540</x>
-      <y>120</y>
+      <y>110</y>
       <width>371</width>
       <height>531</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QLabel" name="dialLabel">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>30</y>
-      <width>69</width>
-      <height>20</height>
-     </rect>
-    </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);
-font: 12pt &quot;Segoe UI&quot;;</string>
-    </property>
-    <property name="text">
-     <string>Dialer</string>
+     <string notr="true">color: rgb(0, 0, 0);</string>
     </property>
    </widget>
    <widget class="QLabel" name="addressBook">
@@ -390,7 +376,7 @@ font: 12pt &quot;Segoe UI&quot;;</string>
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>290</y>
+      <y>260</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -414,7 +400,7 @@ background-color:none;</string>
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>290</y>
+      <y>260</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -438,7 +424,7 @@ background-color:none;</string>
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>290</y>
+      <y>260</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -462,7 +448,7 @@ background-color:none;</string>
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>190</y>
+      <y>160</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -486,7 +472,7 @@ background-color:none;</string>
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>190</y>
+      <y>160</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -510,7 +496,7 @@ background-color:none;</string>
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>190</y>
+      <y>160</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -534,7 +520,7 @@ background-color:none;</string>
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>390</y>
+      <y>360</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -558,7 +544,7 @@ background-color:none;</string>
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>390</y>
+      <y>360</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -582,7 +568,7 @@ background-color:none;</string>
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>390</y>
+      <y>360</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -606,7 +592,7 @@ background-color:none;</string>
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>500</y>
+      <y>470</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -626,14 +612,90 @@ background-color:none;</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>660</y>
+      <width>91</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/img_321695.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>660</y>
+      <width>61</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/Picture1-512.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_13">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>670</y>
+      <width>61</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/clock-png-icon-8-transparent.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_14">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>670</y>
+      <width>61</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/img_550735.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>986</width>
-     <height>22</height>
+     <width>983</width>
+     <height>29</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuTools">
