--- a/dialerwindow.ui
+++ b/dialerwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>983</width>
+    <width>1002</width>
     <height>808</height>
    </rect>
   </property>
@@ -347,12 +347,21 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
      <rect>
       <x>540</x>
       <y>110</y>
-      <width>371</width>
+      <width>411</width>
       <height>531</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(0, 0, 0);</string>
+    </property>
+    <property name="showGrid">
+     <bool>false</bool>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+    <property name="cornerButtonEnabled">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLabel" name="addressBook">
@@ -694,8 +703,8 @@ background-repeat:none;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>983</width>
-     <height>29</height>
+     <width>1002</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuTools">
