added "Recent" icons for address book & iPhone format

--- a/images.qrc
+++ b/images.qrc
@@ -11,5 +11,9 @@
         <file>images/img_321695.png</file>
         <file>images/img_550735.png</file>
         <file>images/Picture1-512.png</file>
+        <file>images/clockwithcolors.png</file>
+        <file>images/icon-ui-1-options-512.png</file>
+        <file>images/graydots.png</file>
+        <file>images/5cb0633d80f2cf201a4c3253.png</file>
     </qresource>
 </RCC>
