--- a/dialerwindow.ui
+++ b/dialerwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>956</width>
-    <height>808</height>
+    <width>1222</width>
+    <height>1195</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,8 +20,8 @@
    <widget class="QPushButton" name="pushOne">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>100</y>
+      <x>120</x>
+      <y>260</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -31,6 +31,7 @@
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:transparent;
+font: 75 10pt &quot;MS Shell Dlg 2&quot;;
 alternate-background-color: rgb(255, 255, 255);
 border-image: url(:/images/gray button.png);
 color: rgb(0, 0, 0);
@@ -44,8 +45,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushTwo">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>100</y>
+      <x>230</x>
+      <y>260</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -66,8 +67,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushThree">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>100</y>
+      <x>340</x>
+      <y>260</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -88,8 +89,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushFour">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>200</y>
+      <x>120</x>
+      <y>360</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -110,8 +111,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushFive">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>200</y>
+      <x>230</x>
+      <y>360</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -132,8 +133,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushSix">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>200</y>
+      <x>340</x>
+      <y>360</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -154,8 +155,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushSeven">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>300</y>
+      <x>120</x>
+      <y>460</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -176,8 +177,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushEight">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>300</y>
+      <x>230</x>
+      <y>460</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -198,8 +199,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushNine">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>300</y>
+      <x>340</x>
+      <y>460</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -220,8 +221,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushStar">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>410</y>
+      <x>120</x>
+      <y>570</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -241,8 +242,8 @@ color: rgb(0, 0, 0);</string>
    <widget class="QPushButton" name="pushZero">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>410</y>
+      <x>230</x>
+      <y>570</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -263,8 +264,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushHash">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>410</y>
+      <x>340</x>
+      <y>570</y>
       <width>111</width>
       <height>101</height>
      </rect>
@@ -285,8 +286,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushEnd">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>530</y>
+      <x>240</x>
+      <y>730</y>
       <width>101</width>
       <height>101</height>
      </rect>
@@ -306,8 +307,8 @@ background-repeat:none;</string>
    <widget class="QPushButton" name="pushDel">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>540</y>
+      <x>360</x>
+      <y>730</y>
       <width>81</width>
       <height>81</height>
      </rect>
@@ -326,9 +327,9 @@ background-repeat:none;</string>
    <widget class="QLineEdit" name="lineDisplay">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>40</y>
-      <width>311</width>
+      <x>160</x>
+      <y>210</y>
+      <width>251</width>
       <height>31</height>
      </rect>
     </property>
@@ -345,10 +346,10 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QTableView" name="tableSafe">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>110</y>
+      <x>630</x>
+      <y>210</y>
       <width>371</width>
-      <height>531</height>
+      <height>571</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -385,25 +386,25 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
    <widget class="QLabel" name="addressBook">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>30</y>
+      <x>630</x>
+      <y>160</y>
       <width>161</width>
       <height>20</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(0, 0, 0);
-font: 12pt &quot;Segoe UI&quot;;</string>
+font: 63 12pt &quot;Lucida Fax&quot;;</string>
     </property>
     <property name="text">
-     <string>Address Book</string>
+     <string>Recent</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>260</y>
+      <x>360</x>
+      <y>420</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -426,8 +427,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>260</y>
+      <x>250</x>
+      <y>420</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -450,8 +451,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>260</y>
+      <x>140</x>
+      <y>420</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -474,8 +475,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>160</y>
+      <x>250</x>
+      <y>320</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -498,8 +499,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>160</y>
+      <x>360</x>
+      <y>320</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -522,8 +523,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>160</y>
+      <x>140</x>
+      <y>320</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -546,8 +547,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>360</y>
+      <x>140</x>
+      <y>520</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -570,8 +571,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>360</y>
+      <x>250</x>
+      <y>520</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -594,8 +595,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>360</y>
+      <x>360</x>
+      <y>520</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -618,8 +619,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>470</y>
+      <x>250</x>
+      <y>630</y>
       <width>69</width>
       <height>20</height>
      </rect>
@@ -642,8 +643,8 @@ background-color:none;</string>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>660</y>
+      <x>110</x>
+      <y>830</y>
       <width>91</width>
       <height>61</height>
      </rect>
@@ -661,8 +662,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>660</y>
+      <x>310</x>
+      <y>830</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -680,8 +681,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>670</y>
+      <x>220</x>
+      <y>840</y>
       <width>61</width>
       <height>41</height>
      </rect>
@@ -699,8 +700,8 @@ background-repeat:none;</string>
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>670</y>
+      <x>390</x>
+      <y>840</y>
       <width>61</width>
       <height>41</height>
      </rect>
@@ -715,14 +716,185 @@ background-repeat:none;</string>
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="label_15">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>820</y>
+      <width>61</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/Picture1-512.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_16">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>830</y>
+      <width>61</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/img_550735.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_17">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>820</y>
+      <width>91</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/graydots.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_18">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>810</y>
+      <width>101</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/clockwithcolors.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_19">
+    <property name="geometry">
+     <rect>
+      <x>990</x>
+      <y>60</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/icon-ui-1-options-512.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_20">
+    <property name="geometry">
+     <rect>
+      <x>-110</x>
+      <y>20</y>
+      <width>791</width>
+      <height>941</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/5cb0633d80f2cf201a4c3253.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_21">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>20</y>
+      <width>791</width>
+      <height>941</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+image: url(:/images/5cb0633d80f2cf201a4c3253.png);
+border: none;
+background-repeat:none;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>label_21</zorder>
+   <zorder>label_20</zorder>
+   <zorder>pushOne</zorder>
+   <zorder>pushTwo</zorder>
+   <zorder>pushThree</zorder>
+   <zorder>pushFour</zorder>
+   <zorder>pushFive</zorder>
+   <zorder>pushSix</zorder>
+   <zorder>pushSeven</zorder>
+   <zorder>pushEight</zorder>
+   <zorder>pushNine</zorder>
+   <zorder>pushStar</zorder>
+   <zorder>pushZero</zorder>
+   <zorder>pushHash</zorder>
+   <zorder>pushEnd</zorder>
+   <zorder>pushDel</zorder>
+   <zorder>lineDisplay</zorder>
+   <zorder>tableSafe</zorder>
+   <zorder>addressBook</zorder>
+   <zorder>label_2</zorder>
+   <zorder>label_3</zorder>
+   <zorder>label_4</zorder>
+   <zorder>label_5</zorder>
+   <zorder>label_6</zorder>
+   <zorder>label_7</zorder>
+   <zorder>label_8</zorder>
+   <zorder>label_9</zorder>
+   <zorder>label_10</zorder>
+   <zorder>label_11</zorder>
+   <zorder>label</zorder>
+   <zorder>label_12</zorder>
+   <zorder>label_13</zorder>
+   <zorder>label_14</zorder>
+   <zorder>label_15</zorder>
+   <zorder>label_16</zorder>
+   <zorder>label_17</zorder>
+   <zorder>label_18</zorder>
+   <zorder>label_19</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>956</width>
-     <height>21</height>
+     <width>1222</width>
+     <height>29</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuTools">
